Date as parameter

--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clock Widget</title>
+    <title>Countdown Widget</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="script.js"></script>
+
 </head>
 <body>
-    <div class="centerDiv" id="dateSelection-area">
+
+    <div id="dateSelection-area"  class="centerDiv" >
         <label>Select a date to create a Countdown </label>
         <input type="date" id="birthday" name="birthday" onchange="calendarChange(this.value)">
         <div class="selected-date"></br></div>
         <button onclick="enterDate()">Enter Date</button>
     </div>
-    <div class="centerDiv" id="countdown-area">
+
+    <div id="countdown-area" class="centerDiv">
         <div>
             <i class="glyphicon glyphicon-remove icon" onclick="newCountdown()"></i>
         </div> 
@@ -26,5 +28,6 @@
         <div id="countdownM"></div>
         <div id="countdownS"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
