--- a/index.html
+++ b/index.html
@@ -6,18 +6,65 @@
     <title>Countdown Widget</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
 </head>
 <body>
 
-    <div id="dateSelection-area"  class="selectionDiv" >
-        <label for="dateSelector">Select a date to create a Countdown </label>
-        <input type="date" id="dateSelector" name="dateSelector" onchange="calendarChange(this.value)">
-        </br>
-        <label for="urlArea">Copy the URL and embeded to yout notion.</label>
+    <div id="dateSelection-area"  class="selectionDiv text-label" >
+        <div>
+            Select a date to create a Countdown:
+            </br>
+            <input type="date" id="dateSelector" name="dateSelector" onchange="calendarChange(this.value)">    
+        </div>
+
+    </br>
+
+        <div>
+            Select your personalition:
+            <div>
+                <input class="form-check-input" type="radio" name="personalizeColors" id="themePicker" value="theme" checked onchange="radioChange(this.value)">
+                Select one of the Notion themes
+                <div>
+                    <select class="form-select" name="notionThemeSelector" id="notionThemeSelector" onchange="selectTheme(this.value)" >
+                        <option value="darkMode" selected >Dark Mode</option>
+                        <option value="grayLM">Gray Light Mode</option>
+                        <option value="grayDM">Gray Dark Mode</option>
+                        <option value="brownLM">Brown Light Mode</option>
+                        <option value="brownDM">Brown Dark Mode</option>
+                        <option value="orangeLM">Orange Light Mode</option>
+                        <option value="orangeDM">Orange Dark Mode</option>
+                        <option value="yellowLM">Yellow Light Mode</option>
+                        <option value="yellowDM">Yellow Dark Mode</option>
+                        <option value="greenLM">Green Light Mode</option>
+                        <option value="greenDM">Green Dark Mode</option>
+                        <option value="blueLM">Blue Light Mode</option>
+                        <option value="blueDM">Blue Dark Mode</option>
+                        <option value="purpleLM">Purple Light Mode</option>
+                        <option value="purpleDM">Purple Dark Mode</option>
+                        <option value="pinkLM">Pink Light Mode</option>
+                        <option value="pinkDM">Pink Dark Mode</option>
+                        <option value="redLM">Red Light Mode</option>
+                        <option value="redDM">Red Dark Mode</option>
+                    </select>
+                </div>
+            </div>
+            <div>
+                <input class="form-check-input" type="radio" name="personalizeColors" id="colorPicker" value="color" onchange="radioChange(this.value)">
+                Or select a color from the color wheel
+                <div id="colorsPicker" >
+                    Text
+                    <input type="color" id="colorTextSelect" name="colorSelect" value="#FFFFFF" onchange="selectColorText(this.value)" disabled >
+                    </br>
+                    Background
+                    <input type="color" id="colorBGSelect" name="colorSelect" value="#000000" onchange="selectColorBg(this.value)" disabled>
+                </div>
+            </div>
+        </div>
+
+    </br>
+        Copy the URL and embeded to yout notion.
         <textarea id="urlArea" name="urlArea" rows="4" cols="50" disabled readonly></textarea>
         <button onclick="myFunction()">Copy text</button>
-   </div>
+    </div>
     
     <div id="preview">
         <div id="countdown-area" class="centerDiv">
