--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -10,19 +10,36 @@
 </head>
 <body>
     <div id="countdown-area" class="centerDiv">
-        <div class="selected-date"></div>
-        <div id="try"></div>
-        <div id="countdownD"></div>
-        <div id="countdownH"></div>
-        <div id="countdownM"></div>
-        <div id="countdownS"></div>
+        <div class="selected-date text-label"></div>
+        <div class="calendarRow">
+            <div id="daysClndr" class="cardRow">
+                <div id="countdownD"></div>
+                <div class="calendar-label">D</div>
+            </div>
+            <div id="hoursClndr" class="cardRow">
+                <div id="countdownH"></div>
+                <div class="calendar-label">H</div>
+            </div>
+            <div id="minutesClndr" class="cardRow">
+                <div id="countdownM"></div>
+                <div class="calendar-label">M</div>
+            </div>
+            <div id="secondsClndr" class="cardRow">
+                <div id="countdownS"></div>
+                <div class="calendar-label">S</div>
+            </div>
+        </div>
+        <div>
+           <span class="glyphicon glyphicon-phone"></span>
+        </div>
     </div>
-
+    
     <div id="expired-area" class="centerDiv">
         <div class="selected-date"></div>
         <div id="expired-date">EXPIRED DATE</div>
         <button id="newDateButton" onclick="window.open('https://martagd.github.io/countdownWidget/index.html')" ">Get new Embedded</button>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
