--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -30,10 +30,10 @@
             </div>
         </div>
         <div>
-           <span class="glyphicon glyphicon-phone"></span>
+           <span id="iconDecor" class="glyphicon"></span>
         </div>
     </div>
-    
+
     <div id="expired-area" class="centerDiv">
         <div class="selected-date"></div>
         <div id="expired-date">EXPIRED DATE</div>
